crates/biome_plugin_loader/src/snapshots/mutations_derived_field_replacements_value_token.snap
---
source: crates/biome_plugin_loader/src/analyzer_js_plugin.rs
expression: content
---
# Plugin

## `/plugin.js`

```js
import {
	ast,
	createMutation,
	defineRule,
	factory,
	registerDiagnostic,
} from "@biomejs/plugin-api";

export const fixer = defineRule({
	query: ast("JS_MODULE"),
	run(root) {
		const statement = root.items[0];
		const call = statement.expression;
		const args = call.arguments;
		const list = args.children()[0];
		const [first, second] = args.args;
		const token = first.token("valueToken");

		const updated = first.withValueToken(
			factory.token("JS_NUMBER_LITERAL", "9"),
		);
		const mutation = createMutation(root);
		mutation.replaceNode(first, updated);
		registerDiagnostic(root, "warning", "Updated field", {
			mutation,
			message: "Apply edit",
			kind: "safe",
		});
	},
});
```

# Input

## `/file.js`

```js
call(/* keep */1,2);
```

# Diagnostics

```block
/file.js:1:1 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Updated field
  
  > 1 │ call(/* keep */1,2);
      │ ^^^^^^^^^^^^^^^^^^^^
  
  i Safe fix: Apply edit
  
  - call(/*·keep·*/1,2);
  + call(/*·keep·*/9,2);
```
